Add ReWoo Worflow and logic for parsin Adding updated Prompt Templates for Agents

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -24,6 +24,9 @@
     <None Update="Agents\Templates\Act-Agent.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Agents\Templates\Orchestration-Agent.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Agents\Templates\Reason-Agent.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
