--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
