Update to user workflow for travel planning

--- a/src/Travel.Planning.Api/Travel.Planning.Api.csproj
+++ b/src/Travel.Planning.Api/Travel.Planning.Api.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Workflows\Workflows.csproj" />
   </ItemGroup>
 
 </Project>
