--- a/src/Travel.Planning.Api/appsettings.Development.json
+++ b/src/Travel.Planning.Api/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AzureStorageSeedSettings": {
+    "ContainerName": "workflow",
+    "LocalFolderPath": "assets"
+  },
+  "LanguageModelSettings": {
+    "DeploymentName": "",
+    "Endpoint": "",
+    "ApiKey": ""
   }
+  
 }
