Move workflows to dedicated Travel project and namespace

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -24,7 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Agents\Agents.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
-    <ProjectReference Include="..\Workflows\Workflows.csproj" />
+    <ProjectReference Include="..\Travel.Workflows\Travel.Workflows.csproj" />
   </ItemGroup>
 
 </Project>
