--- a/src/Travel.Planning.Api/Travel.Planning.Api.csproj
+++ b/src/Travel.Planning.Api/Travel.Planning.Api.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
-    <ProjectReference Include="..\Workflows\Workflows.csproj" />
+    <ProjectReference Include="..\Travel.Workflows\Travel.Workflows.csproj" />
   </ItemGroup>
 
 </Project>
