--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -19,7 +19,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Api\Api.csproj" />
-    <ProjectReference Include="..\Travel.Planning.Api\Travel.Planning.Api.csproj" />
+    <ProjectReference Include="..\Travel.Application.Api\Travel.Application.Api.csproj" />
+    <ProjectReference Include="..\Travel.Workflows.Api\Travel.Workflows.Api.csproj" />
   </ItemGroup>
 
 </Project>
