Add gateway and session handling via the UI

--- a/ui/.env.development
+++ b/ui/.env.development
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL=http://localhost:5000
-VITE_HUB_BASE_URL=http://localhost:5001
+VITE_API_BASE_URL=https://localhost:7266
+VITE_HUB_BASE_URL=
