--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Api\Api.csproj" />
     <ProjectReference Include="..\Travel.Application.Api\Travel.Application.Api.csproj" />
+    <ProjectReference Include="..\Travel.Gateway\Travel.Gateway.csproj" />
     <ProjectReference Include="..\Travel.Workflows.Api\Travel.Workflows.Api.csproj" />
   </ItemGroup>
 
