Code cleanup and removal

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Travel.Workflows\Travel.Workflows.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
