Experience Project Structure Updates

--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Api\Api.csproj" />
     <ProjectReference Include="..\Travel.Application.Api\Travel.Application.Api.csproj" />
+    <ProjectReference Include="..\Travel.Experience.Api\Travel.Experience.Api.csproj" />
     <ProjectReference Include="..\Travel.Gateway\Travel.Gateway.csproj" />
     <ProjectReference Include="..\Travel.Workflows.Api\Travel.Workflows.Api.csproj" />
   </ItemGroup>
