--- a/src/Travel.Application.Api/appsettings.Development.json
+++ b/src/Travel.Application.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "AzureStorageSeedSettings": {
-    "ContainerName": "workflow",
+    "ContainerName": "travel",
     "LocalFolderPath": "assets"
   }
 }
