Updates to Handle Flight services

--- a/src/Travel.Gateway/appsettings.Development.json
+++ b/src/Travel.Gateway/appsettings.Development.json
@@ -12,7 +12,7 @@
       "route1": {
         "ClusterId": "application.api",
         "Match": {
-          "Path": "api/travel/plans/{**catch-all}"
+          "Path": "api/travel/{**catch-all}"
         }
       },
       "route2": {
