Add MCP Tools for Get Flight Search

--- a/src/Travel.Application.Mcp/appsettings.Development.json
+++ b/src/Travel.Application.Mcp/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AzureStorageSeedSettings": {
+    "ContainerName": "travel",
+    "LocalFolderPath": "assets"
   }
 }
