--- a/src/Travel.Application.Api/Travel.Application.Api.csproj
+++ b/src/Travel.Application.Api/Travel.Application.Api.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="14.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.12" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
+    <PackageReference Include="MediatR"  />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi"  />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets"  />
   </ItemGroup>
 
   <ItemGroup>
