--- a/src/Travel.Application.Mcp/Travel.Application.Mcp.csproj
+++ b/src/Travel.Application.Mcp/Travel.Application.Mcp.csproj
@@ -10,11 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="14.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.12" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
-    <PackageReference Include="ModelContextProtocol" Version="0.6.0-preview.1" />
-    <PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.6.0-preview.1" />
+    <PackageReference Include="MediatR"  />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi"  />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets"  />
+    <PackageReference Include="ModelContextProtocol"  />
+    <PackageReference Include="ModelContextProtocol.AspNetCore" />
   </ItemGroup>
 
   <ItemGroup>
