--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,11 +10,15 @@
     <PackageVersion Include="Microsoft.Agents.AI.Hosting.A2A" Version="1.0.0-preview.260128.1" />
     <PackageVersion Include="Microsoft.Agents.AI.Hosting.A2A.AspNetCore" Version="1.0.0-preview.260128.1" />
     <PackageVersion Include="Microsoft.Agents.AI.A2A" Version="1.0.0-preview.260128.1" />
-   
+    <PackageVersion Include="A2A" Version="0.3.3-preview" />
 
     <PackageVersion Include="Microsoft.Agents.AI" Version="1.0.0-preview.260128.1" />
+    <PackageVersion Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.260128.1" />
     <PackageVersion Include="Microsoft.Agents.AI.Abstractions" Version="1.0.0-preview.260128.1" />
     <PackageVersion Include="Microsoft.Agents.AI.Hosting.AGUI.AspNetCore" Version="1.0.0-preview.260128.1" />
+
+    <PackageVersion Include="Microsoft.Agents.AI.Hosting.AGUI.AspNetCore" Version="1.0.0-preview.251219.1" />
+
 
     <PackageVersion Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.251114.1" />
 
@@ -51,8 +55,8 @@
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0" />
     
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
-    
-    
+
+    <PackageVersion Include="Swashbuckle.AspNetCore" Version="10.1.0" />
     
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.1.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.1.0" />
