--- a/src/Agents/Agents.csproj
+++ b/src/Agents/Agents.csproj
@@ -8,14 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="A2A" Version="0.3.3-preview" />
-    <PackageReference Include="Azure.AI.OpenAI" Version="2.5.0-beta.1" />
-    <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.260108.1" />
-    <PackageReference Include="Microsoft.Agents.AI.A2A" Version="1.0.0-preview.260108.1" />
-    <PackageReference Include="Microsoft.Agents.AI.OpenAI" Version="1.0.0-preview.260108.1" />
-    <PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.251114.1" />
-    <PackageReference Include="Microsoft.Extensions.AI" Version="10.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="A2A" />
+    
+    <PackageReference Include="Azure.AI.OpenAI" />
+    
+    <PackageReference Include="Microsoft.Agents.AI"  />
+    <PackageReference Include="Microsoft.Agents.AI.A2A"  />
+    <PackageReference Include="Microsoft.Agents.AI.OpenAI"  />
+    <PackageReference Include="Microsoft.Agents.AI.Workflows"  />
+    
+    <PackageReference Include="Microsoft.Extensions.AI"  />
   </ItemGroup>
 
   <ItemGroup>
