--- a/src/Travel.Experience.Api/Travel.Experience.Api.csproj
+++ b/src/Travel.Experience.Api/Travel.Experience.Api.csproj
@@ -9,13 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.OpenAI" Version="2.5.0-beta.1" />
-    <PackageReference Include="Microsoft.Agents.AI.A2A" Version="1.0.0-preview.260108.1" />
-    <PackageReference Include="Microsoft.Agents.AI.Hosting.AGUI.AspNetCore" Version="1.0.0-preview.251219.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
+    <PackageReference Include="Azure.AI.OpenAI"  />
+    
+    <PackageReference Include="Microsoft.Agents.AI.A2A"  />
+    <PackageReference Include="Microsoft.Agents.AI.Hosting.AGUI.AspNetCore"  />
+    
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi"  />
+    
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets"  />
+    <PackageReference Include="Swashbuckle.AspNetCore"  />
+
   </ItemGroup>
 
   <ItemGroup>
