--- a/src/Travel.Workflows/Travel.Workflows.csproj
+++ b/src/Travel.Workflows/Travel.Workflows.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.OpenAI" Version="2.5.0-beta.1" />
-    <PackageReference Include="Microsoft.Agents.AI" Version="1.0.0-preview.260108.1" />
-    <PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.251114.1" />
-    <PackageReference Include="ModelContextProtocol" Version="0.6.0-preview.1" />
+    <PackageReference Include="Azure.AI.OpenAI"  />
+    <PackageReference Include="Microsoft.Agents.AI"  />
+    <PackageReference Include="Microsoft.Agents.AI.Workflows"  />
+    <PackageReference Include="ModelContextProtocol"  />
   </ItemGroup>
 
   <ItemGroup>
