--- a/src/Workflows/Workflows.csproj
+++ b/src/Workflows/Workflows.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Agents.AI.Workflows" Version="1.0.0-preview.251114.1" />
+    <PackageReference Include="Microsoft.Agents.AI.Workflows"  />
   </ItemGroup>
 
 </Project>
