Add TaskManager and A2A card for flights

--- a/src/Travel.Agents.A2A/appsettings.Development.json
+++ b/src/Travel.Agents.A2A/appsettings.Development.json
@@ -4,5 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CardSettings": {
+    "AgentCards": [
+      {
+        "Name": "Flights",
+        "Description": "An agent that provides flight information.",
+        "Url": "/api/a2a/flights",
+        "Skills": [
+          {
+            "Name": "search_flights",
+            "Description": "Get current flight information.",
+            "InputModes": [ "What are the flight options from Paris to London?" ]
+          }
+        ],
+        "Version": "1.0"
+      }
+    ]
   }
 }
