--- a/src/Travel.Agents.A2A/appsettings.Development.json
+++ b/src/Travel.Agents.A2A/appsettings.Development.json
@@ -21,5 +21,10 @@
         "Version": "1.0"
       }
     ]
+  },
+  "LanguageModelSettings": {
+    "DeploymentName": "",
+    "Endpoint": "",
+    "ApiKey": ""
   }
 }
