Update Agent Factory to Remove API Keys

--- a/src/Travel.Workflows.A2A/appsettings.Development.json
+++ b/src/Travel.Workflows.A2A/appsettings.Development.json
@@ -11,8 +11,7 @@
   },
   "LanguageModelSettings": {
     "DeploymentName": "",
-    "Endpoint": "",
-    "ApiKey": ""
+    "Endpoint": ""
   }
   
 }
