--- a/src/Travel.Agents.A2A/appsettings.Development.json
+++ b/src/Travel.Agents.A2A/appsettings.Development.json
@@ -24,7 +24,7 @@
   },
   "LanguageModelSettings": {
     "DeploymentName": "",
-    "Endpoint": "",
-    "ApiKey": ""
+    "Endpoint": ""
+  
   }
 }
