--- a/src/Travel.Experience.Api/appsettings.Development.json
+++ b/src/Travel.Experience.Api/appsettings.Development.json
@@ -11,7 +11,6 @@
   },
   "LanguageModelSettings": {
     "DeploymentName": "",
-    "Endpoint": "",
-    "ApiKey" :  ""
+    "Endpoint": ""
   }
 }
