--- a/src/Travel.Agents.A2A/Travel.Agents.A2A.csproj
+++ b/src/Travel.Agents.A2A/Travel.Agents.A2A.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Agents\Agents.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
