--- a/src/Travel.Application.Api/Travel.Application.Api.csproj
+++ b/src/Travel.Application.Api/Travel.Application.Api.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
     <ProjectReference Include="..\Travel.Application\Travel.Application.csproj" />
   </ItemGroup>
 
