--- a/src/Travel.Gateway/Travel.Gateway.csproj
+++ b/src/Travel.Gateway/Travel.Gateway.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Yarp.ReverseProxy" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
+  </ItemGroup>
+
 </Project>
