--- a/src/Travel.Workflows.A2A/Travel.Workflows.A2A.csproj
+++ b/src/Travel.Workflows.A2A/Travel.Workflows.A2A.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
     <ProjectReference Include="..\Travel.Workflows\Travel.Workflows.csproj" />
   </ItemGroup>
 
