Add parsing of Travel Plan SnapShot

--- a/src/Travel.Agents.A2A/Travel.Agents.A2A.csproj
+++ b/src/Travel.Agents.A2A/Travel.Agents.A2A.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
     <ProjectReference Include="..\Travel.Agents.A2A.Flights\Travel.Agents.A2A.Flights.csproj" />
+    <ProjectReference Include="..\Travel.Agents.A2A.Planning\Travel.Agents.A2A.Planning.csproj" />
     <ProjectReference Include="..\Travel.Agents.A2A.Shared\Travel.Agents.A2A.Shared.csproj" />
   </ItemGroup>
 
