--- a/src/Travel.Agents.A2A/appsettings.Development.json
+++ b/src/Travel.Agents.A2A/appsettings.Development.json
@@ -19,6 +19,19 @@
           }
         ],
         "Version": "1.0"
+      },
+      {
+        "Name": "Planning",
+        "Description": "An agent that plans the travel.",
+        "Url": "/api/a2a/planning",
+        "Skills": [
+          {
+            "Name": "plan_travel",
+            "Description": "Manages and Plans the Travel",
+            "InputModes": [ "" ]
+          }
+        ],
+        "Version": "1.0"
       }
     ]
   },
