--- a/src/Travel.Agents.A2A/appsettings.Development.json
+++ b/src/Travel.Agents.A2A/appsettings.Development.json
@@ -14,8 +14,9 @@
         "Skills": [
           {
             "Name": "search_flights",
-            "Description": "Get current flight information.",
-            "InputModes": [ "What are the flight options from Paris to London?" ]
+            "Description": "Searches for flights.",
+            "InputModes": [ "application/json" ],
+            "OutputModes": [ "application/json" ]
           }
         ],
         "Version": "1.0"
