--- a/src/Travel.Agents.A2A.Planning/Travel.Agents.A2A.Planning.csproj
+++ b/src/Travel.Agents.A2A.Planning/Travel.Agents.A2A.Planning.csproj
@@ -1,12 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>259648c8-0817-4cb1-919f-79b4b0dac40a</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,19 +13,14 @@
     <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
+
     <PackageReference Include="Microsoft.Agents.AI.Hosting.A2A" />
-    <PackageReference Include="Microsoft.Agents.AI.Hosting.A2A.AspNetCore" />
     <PackageReference Include="ModelContextProtocol" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Agents\Agents.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
-    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
-    <ProjectReference Include="..\Travel.Agents.A2A.Flights\Travel.Agents.A2A.Flights.csproj" />
-    <ProjectReference Include="..\Travel.Agents.A2A.Planning\Travel.Agents.A2A.Planning.csproj" />
     <ProjectReference Include="..\Travel.Agents.A2A.Shared\Travel.Agents.A2A.Shared.csproj" />
   </ItemGroup>
 
