--- a/src/Travel.Agents.A2A/appsettings.Development.json
+++ b/src/Travel.Agents.A2A/appsettings.Development.json
@@ -14,8 +14,22 @@
         "Skills": [
           {
             "Name": "search_flights",
-            "Description": "Get current flight information.",
-            "InputModes": [ "What are the flight options from Paris to London?" ]
+            "Description": "Searches for flights.",
+            "InputModes": [ "application/json" ],
+            "OutputModes": [ "application/json" ]
+          }
+        ],
+        "Version": "1.0"
+      },
+      {
+        "Name": "Planning",
+        "Description": "An agent that plans the travel.",
+        "Url": "/api/a2a/planning",
+        "Skills": [
+          {
+            "Name": "plan_travel",
+            "Description": "Manages and Plans the Travel",
+            "InputModes": [ "" ]
           }
         ],
         "Version": "1.0"
