--- a/src/Travel.Workflows.Tests/Travel.Workflows.Tests.csproj
+++ b/src/Travel.Workflows.Tests/Travel.Workflows.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Travel.Workflows.Planning\Travel.Workflows.Planning.csproj" />
+    <ProjectReference Include="..\Travel.Workflows\Travel.Workflows.csproj" />
   </ItemGroup>
 
   <ItemGroup>
