Update Infrastructure to Load Templates from AgentTemplateRepository

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,7 @@
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageVersion Include="Microsoft.Extensions.AI" Version="10.2.0" />
     <PackageVersion Include="Microsoft.Extensions.AI.OpenAI" Version="10.2.0-preview.1.26063.2" />
+    <PackageVersion Include="Microsoft.Extensions.Logging" Version="10.0.2" />
     <PackageVersion Include="ModelContextProtocol" Version="0.6.0-preview.1" />
     <PackageVersion Include="ModelContextProtocol.AspNetCore" Version="0.6.0-preview.1" />
     <!--Open Telemetry-->
