--- a/src/Travel.Workflows.Tests.Integration/Travel.Workflows.Tests.Integration.csproj
+++ b/src/Travel.Workflows.Tests.Integration/Travel.Workflows.Tests.Integration.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="AgentTemplates\planning_agent.md">
+    <None Update="AgentTemplates\planning.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
