--- a/src/Travel.Workflows.Tests.Integration/Travel.Workflows.Tests.Integration.csproj
+++ b/src/Travel.Workflows.Tests.Integration/Travel.Workflows.Tests.Integration.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="AgentTemplates\conversation.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="AgentTemplates\extracting.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
