--- a/src/Travel.Tests/Travel.Tests.csproj
+++ b/src/Travel.Tests/Travel.Tests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <UserSecretsId>ccd9704b-512c-4033-b743-864b64c3eb37</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
