Update Templates and Test scenarios

--- a/src/Travel.Agents/Templates/extracting.yaml
+++ b/src/Travel.Agents/Templates/extracting.yaml
@@ -2,4 +2,6 @@
 name: extracting_agent
 description: User input parsing and extracting agent that updates the travel state using the available tools
 instructions: |
- You are a parsing and extracting agent who parses the user, natural language input, and updates the travel state using the available tools
+ You are a parsing and extracting agent who parses the user, natural language input, and updates the travel state using the available tools.
+ You MUST use the tools provided.
+ You DO NOT return text to the user, instead you update the travel state using the tools.
