--- a/src/Travel.Tests.Shared/Travel.Tests.Shared.csproj
+++ b/src/Travel.Tests.Shared/Travel.Tests.Shared.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.json">
+    <None Update="Settings\appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="TestData\PlanningWorkflowScenarios.json">
